# grassrootsstartup-ComputerVsion-zynq

./: MIT-license.txt  README.html  README.md  README.md~
algorithm_c/src/: stereo_cpu.cpp
app/: CMakeLists.txt
app/Xinclude/: xvtc_hw.h
app/src/: configVdmaApp.cpp  configVdmaApp.h  stereo.cpp  stereo.h  stereo_FPGA_camCap4Cali.cpp  stereo_FPGA_hardUcal.cpp  stereo_FPGA_hardUcal_realtime.cpp  stereo_FPGA_softUcal.cpp  stereo_cpu.cpp  stereo_hwAccel.cpp  stereo_hwAccel_kitti.cpp  stereo_hwAccel_one_image.cpp  stereo_hwAccel_rt.cpp  stereo_slow.cpp  v4l2grab_2.cpp  v4l2grab_2.h  vga_modes.h
app/src/display_ctrl/: display_ctrl.c  vga_modes.h
appDesktop/: CMakeLists.txt  QMatrix.xml  R_matrix.xml  T_matrix.xml  cameraDistortionMatrix1.xml  cameraDistortionMatrix2.xml  cameraMatrix1.xml  cameraMatrix2.xml  cameraProjectionMatrix1.xml  cameraProjectionMatrix2.xml  cameraRotationMatrix1.xml  cameraRotationMatrix2.xml  distortion_coeffs_left.xml  distortion_coeffs_right.xml  intrinsic_matrix_left.xml  intrinsic_matrix_right.xml  stereocpu.cpp  stereocpu.h
appDesktop/Xinclude/: xaxivdma_hw.h  xil_io.h  xparameters.h
appDesktop/src/: stereo_capture.cpp  stereo_cpu (copy).cpp  stereo_cpu.cpp  stereo_gpu.cpp  stereo_hwAccel.cpp  stereo_hwAccel_kitti.cpp  usb_cap.cpp  v4l2grab_2.cpp  v4l2grab_2.h
appDesktop/src/cuda/: cuda_funs.h  rectify.cu  stereogpucore.cpp  stereogpucore.h
driver/: .my_dynclk.ko.cmd  .my_dynclk.mod.o.cmd  .my_dynclk.o.cmd  .my_vdma.ko.cmd  .my_vdma.mod.o.cmd  .my_vdma.o.cmd  .my_vdma_4cali.ko.cmd  .my_vdma_4cali.mod.o.cmd  .my_vdma_4cali.o.cmd  .my_vdma_4cali_long.ko.cmd  .my_vdma_4cali_long.mod.o.cmd  .my_vdma_4cali_long.o.cmd  .my_vdma_long.ko.cmd  .my_vdma_long.mod.o.cmd  .my_vdma_long.o.cmd  .my_vdma_old.ko.cmd  .my_vdma_old.mod.o.cmd  .my_vdma_old.o.cmd  .my_vdma_short.ko.cmd  .my_vdma_short.mod.o.cmd  .my_vdma_short.o.cmd  .my_vtc.ko.cmd  .my_vtc.mod.o.cmd  .my_vtc.o.cmd  .usbCamera.ko.cmd  .usbCamera.mod.o.cmd  .usbCamera.o.cmd  .vhdmi.ko.cmd  .vhdmi.mod.o.cmd  .vhdmi.o.cmd  Makefile  modules.order  my_dynclk.c  my_dynclk.ko  my_dynclk.mod.c  my_vdma (3rd copy).c  my_vdma (another copy).c  my_vdma (copy).c  my_vdma.c  my_vdma.ko  (+26 more)
driver/.tmp_versions/: my_dynclk.mod  my_vdma.mod  my_vdma_4cali.mod  my_vdma_4cali_long.mod  my_vdma_long.mod  my_vdma_old.mod  my_vdma_short.mod  my_vtc.mod  usbCamera.mod  vhdmi.mod
driver/Xinclude/: xil_types.h
driver/driver_AllocateOnly/: 720p_clkgen_regconfigfile.h  Makefile  cf_hdmi.h  iic_reg_config.h  vhdmi.c  vhdmi_bak.c  xparameters.h
driver/driver_AllocateOnly/.tmp_versions/: vhdmi.mod
driver/driver_AllocateOnly/si/: Untitled Project.IAB  Untitled Project.IAD  Untitled Project.IMB  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.PRI  Untitled Project.PS
driver/driver_AllocateOnly/test/: Makefile  hello.c
driver/driver_AllocateOnly/test/.tmp_versions/: hello.mod
episode3/algorithm_c/: CMakeLists.txt
episode3/algorithm_c/src/: stereo_cpu.cpp
src/: stereo_src_20201231CHINATIME.tar.bz2
src/backup/: stereo_src_good_norectify.tar.xz  stereo_src_good_soft_decimation.tar.xz  stereo_src_realtime_problemwithrectify.tar.xz  stereo_src_withRectify_failed.tar.xz  stereo_src_xx.tar.xz
src/stereo_src/: LPDiLeftVolumn.v  LPDiRightVolumn.v  LeftRightCheck.v  TimeGen.v  WTA.v  axis2dvp.v  camCapture.v  census_transform.v  cmos_8_16bit.v  cmos_in_axi4s_formatter.v  color2gray.v  fillinHoles.v  left_right_input_stream_axis.v  matching_cost.v  median3by3kernel.v  medianFilter.v  rectify.v  rectify_all_0_wrong.v  rectify_float16.v  rectify_float32_workable.v  remove_noise.v  stereo_v1_0.v  stereo_v1_0_M00_AXIS.v  stereo_v1_0_M00_AXIS_bak_8bitgray_output.v  stereo_v1_0_S00_AXI.v  stereo_v1_0_S00_AXIS.v  synStream.v  topModule.v  tripleSorter.v
src/stereo_src/Untitled Folder/: LPDiLeftVolumn.v  LPDiRightVolumn.v  LeftRightCheck.v  TimeGen.v  WTA.v  census_transform.v  cmos_in_axi4s.v  cmos_in_axi4s_coupler.v  color2gray.v  colorMapLut.COE  colorMapLut.txt  fillinHoles.v  i2c_com.v  left_right_input_stream_axis.v  matching_cost.v  median3by3kernel.v  power_on_delay.v  rectify.v  rectify_all_0_wrong.v  rectify_float16.v  rectify_float32_workable.v  reg_config.v  remove_noise.v  resize.v  stereo_v1_0.v  stereo_v1_0_M00_AXIS.v  stereo_v1_0_S00_AXI.v  stereo_v1_0_S00_AXIS.v  synStream.v  topModule.v  tripleSorter.v
src/stereo_src/Untitled Folder/bak/: stereo_v1_0_M00_AXIS.v
src/stereo_src/Untitled Folder/sub/: stereo  stereo.sublime-workspace
src/stereo_src/bak/: stereo_v1_0_M00_AXIS.v
www.decensormedia.org/: www.decensormedia.org
